// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestView when status scan <Completed> 1`] = `
<div>
  <HeaderSection
    description={
      <p>
        some description
      </p>
    }
    title="some title"
  />
  <stubInstancesSectionComponent
    cardsViewData={
      Object {
        "visualHelperEnabled": true,
      }
    }
    deps={Object {}}
    scanMetadata={
      Object {
        "timespan": Object {
          "scanComplete": 1900-02-02T03:04:00.000Z,
        },
      }
    }
    shouldAlertFailuresCount={true}
    tabStopsEnabled={true}
    userConfigurationStoreData={
      Object {
        "isFirstTime": false,
      }
    }
  />
</div>
`;

exports[`TestView when status scan <Failed> 1`] = `
<div>
  <HeaderSection
    description={
      <p>
        some description
      </p>
    }
    title="some title"
  />
  <ScanningSpinner
    aria-live="assertive"
    isSpinning={false}
    label="Scanning..."
  />
</div>
`;

exports[`TestView when status scan <Scanning> 1`] = `
<div>
  <HeaderSection
    description={
      <p>
        some description
      </p>
    }
    title="some title"
  />
  <ScanningSpinner
    aria-live="assertive"
    isSpinning={true}
    label="Scanning..."
  />
</div>
`;

exports[`TestView when status scan <undefined> 1`] = `
<div>
  <HeaderSection
    description={
      <p>
        some description
      </p>
    }
    title="some title"
  />
  <ScanningSpinner
    aria-live="assertive"
    isSpinning={false}
    label="Scanning..."
  />
</div>
`;
